--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1064,10 +1064,10 @@ nav.navbar {
 	3.1. Banner
 -------------------------------*/
 .banner-section {
-  /* background-image: url("../images/banner-image.jpg");
+   background-image: url("assets/images/main.jpg");
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover; */
+  background-size: cover; 
   padding: 160px 0;
   position: relative;
 }
