--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1064,7 +1064,7 @@ nav.navbar {
 	3.1. Banner
 -------------------------------*/
 .banner-section {
-   background-image: url("assets/images/main.jpg");
+  background-image: url("../images/main.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover; 
